--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   lottie: ^3.3.1
   flutter_screenutil: ^5.9.3
   flutter_launcher_icons: ^0.14.4
+  country_picker: ^2.0.26
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
