--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,23 +25,23 @@ dev_dependencies:
   flutter_lints: ^6.0.0
 
 flutter_launcher_icons:
-  image_path: "assets/logo/logo.png"
+  image_path: "assets/icon/icon.png"
   android: "launcher_icon"
   min_sdk_android: 21
   ios: true
   remove_alpha_channel_ios: true
   web:
     generate: true
-    image_path: "assets/logo/logo.png"
+    image_path: "assets/icon/icon.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
   windows:
     generate: true
-    image_path: "assets/logo/logo.png"
+    image_path: "assets/icon/icon.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "assets/logo/logo.png"
+    image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -49,9 +49,7 @@ flutter_launcher_icons:
 flutter:
   uses-material-design: true
   assets:
-    - assets/logo/
     - assets/icon/
-    - assets/
     - assets/images/
     - assets/animations/
     - assets/intro/
